Implementing RestTemplete and some structure

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.application.name=excersicetwo
-server.port=3032
+server.port=8181
+application.auth.user=Gerardo
+application.auth.password=Test123
